Fixing cell values alignements in player-summary stats table

--- a/src/css/less/livescore/rules/player-summary/player-summary-general.less
+++ b/src/css/less/livescore/rules/player-summary/player-summary-general.less
@@ -160,7 +160,7 @@
       tr{
       
         th{
-          text-align: right;
+          text-align: center;
           
           &.competition{
             text-align: left;
@@ -195,7 +195,7 @@
           }
           
           td{
-            text-align: right;
+            text-align: center;
             
             &.competition{
               text-align: left;
